# os_labs

./: .gitignore  CMakeLists.txt  README.md
cp/doc/: KP_vetoshkina.docx
lab1/: CMakeLists.txt  README.md  main.cpp
lab1/doc/: lab1_report.docx
lab1/include/: parent.hpp
lab1/src/: child.cpp  parent.cpp
lab2/: CMakeLists.txt  README.md  main.cpp
lab2/doc/: lab2_report.docx
lab2/include/: filter.h
lab2/src/: filter.cpp
lab3/: CMakeLists.txt  README.md  main.cpp
lab3/doc/: lab3_report.docx
lab3/src/: child.cpp  parent.cpp
lab4/: CMakeLists.txt  README.md  main_dynamic.cpp  main_linked.cpp
lab4/doc/: lab4_report.docx
lab4/include/: functions.h
lab4/src/: implementation1.cpp  implementation2.cpp
lab5_7/: CMakeLists.txt  README.md
lab5_7/doc/: lab5_7_report.docx
lab5_7/include/: BalancedTree.h  CalculationNode.h  ZMQFunctions.h
lab5_7/src/: ClientProgram.cpp  ServerProgram.cpp
lab8/: CMakeLists.txt  README.md
lab8/doc/: lab8_report.docx
lab8/src/: parent.cpp
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_1_test.cpp  lab4_2_test.cpp  lab5_7_test.cpp
